--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Wähle eine Version:</h1>
   <ul>
-    <li><a href="Calc V1/">Version 1</a></li>
+    <li><a href="Calc/">Version 1</a></li>
     <li><a href="Calc V2/">Version 2</a></li>
     <li><a href="Calc V3/">Version 3</a></li>
     <li><a href="Calc V4/">Version 4</a></li>
