--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <body>
   <h1>Wähle eine Version:</h1>
   <ul>
-    <li><a href="Calc/">Version 1</a></li>
-    <li><a href="Calc V2/">Version 2</a></li>
-    <li><a href="Calc V3/">Version 3</a></li>
-    <li><a href="Calc V4/">Version 4</a></li>
-    <li><a href="Calc V5/">Version 5</a></li>
-    <li><a href="Calc V6/">Version 6</a></li>
+    <li><a href="Calc/">Version 1.0</a></li>
+    <li><a href="Calc V2/">Version 2.0</a></li>
+    <li><a href="Calc V3/">Version 3.0</a></li>
+    <li><a href="Calc V4/">Version 3.1</a></li>
+    <li><a href="Calc V5/">Version 3.2</a></li>
+    <li><a href="Calc V6/">Version 4.0/a></li>
     <!-- usw. -->
   </ul>
 </body>
