--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <li><a href="Calc V4/">Version 3.1</a></li>
     <li><a href="Calc V5/">Version 3.2</a></li>
     <li><a href="Calc V6/">Version 4.0</a></li>
-    <li><a href="Calc V7/">Version 5.0 bald verfügbar</a></li>
+    <li><a href="Calc V7/">Version 4.1</a></li>
+    <li><a href="Calc V8/">Version 5.0 bald verfügbar</a></li>
     <!-- usw. -->
   </ul>
 </body>
