--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 <body>
   <h1>Wähle eine Version:</h1>
   <ul>
-    <li><a href="Calc/">Version 1.0</a></li>
-    <li><a href="Calc V2/">Version 2.0</a></li>
-    <li><a href="Calc V3/">Version 3.0</a></li>
+    <li><a href="Calc/">Version 1.0 "simple Web Calculator"</a></li>
+    <li><a href="Calc V2/">Version 2.0 "Advanced Web Calculator"</a></li>
+    <li><a href="Calc V3/">Version 3.0 "Aqua Calc Pro"</a></li>
     <li><a href="Calc V4/">Version 3.1</a></li>
     <li><a href="Calc V5/">Version 3.2</a></li>
     <li><a href="Calc V6/">Version 4.0</a></li>
     <li><a href="Calc V7/">Version 4.1</a></li>
-    <li><a href="Calc V8/">Version 5.0 bald verfügbar</a></li>
+    <li><a href="Calc V8/">Version 4.2</a></li>
+    <li><a href="Calc V9/">Version 5.0 "Calculator"</a></li>
+    
     <!-- usw. -->
   </ul>
 </body>
