--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="Calc V7/">Version 4.1</a></li>
     <li><a href="Calc V8/">Version 4.2</a></li>
     <li><a href="Calc V9/">Version 5.0 "Calculator"</a></li>
+    <li><a href="Calc V10/">Version 6.0 update soon</a></li>
     
     <!-- usw. -->
   </ul>
