--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <li><a href="Calc V7/">Version 4.1</a></li>
     <li><a href="Calc V8/">Version 4.2</a></li>
     <li><a href="Calc V9/">Version 5.0 "Calculator"</a></li>
-    <li><a href="Calc V10/">Version 6.0 update soon</a></li>
+    <li><a href="Calc V10/">Version 5.1 "bug-free Canculator"</a></li>
+    <li><a href="Calc V12.2/">Version 6.0 "cozy Calculator"</a></li>
     
     <!-- usw. -->
   </ul>
