--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <li><a href="Calc V3/">Version 3.0 "Aqua Calc Pro"</a></li>
     <li><a href="Calc V4/">Version 3.1</a></li>
     <li><a href="Calc V5/">Version 3.2</a></li>
-    <li><a href="Calc V6/">Version 4.0</a></li>
+    <li><a href="Calc V6/">Version 4.0 "Background Calculator" </a></li>
     <li><a href="Calc V7/">Version 4.1</a></li>
-    <li><a href="Calc V8/">Version 4.2</a></li>
+    <li><a href="Calc V8/">Version 4.2 "Vibrant Calculator" </a></li>
     <li><a href="Calc V9/">Version 5.0 "Calculator"</a></li>
-    <li><a href="Calc V10/">Version 5.1 "bug-free Canculator"</a></li>
+    <li><a href="Calc V10/">Version 5.1 "bug-free Calculator"</a></li>
     <li><a href="Calc V12.2/">Version 6.0 "cozy Calculator"</a></li>
     
     <!-- usw. -->
