--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Taschenrechner Versionen</title>
+  <title>Calculator Versions</title>
 </head>
 <body>
-  <h1>Wähle eine Version:</h1>
+  <h1>Choose a Version:</h1>
   <ul>
     <li><a href="Calc/">Version 1.0 "simple Web Calculator"</a></li>
     <li><a href="Calc V2/">Version 2.0 "Advanced Web Calculator"</a></li>
